Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -153,6 +153,12 @@ Booting is a process of starting a computer. The process involves a chain of sta
 
 ### Debugging und Testing
 
+(examples)
+1. use alarm LED on the keyboard
+   if programm reach a state
+2. use an existing device on machine.
+   attach from other machines to this machine. And listen to your device.
+
 1. Type of debugging
     - Emulators: emulate real hardware in software
         - Simplifies debugging
