Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -164,7 +164,7 @@ Booting is a process of starting a computer. The process involves a chain of sta
         - Simplifies debugging
         - Shorter development cyclles
         - **Emulation is a special case of virtualization, which provides a virtual resource Y based on based on a resource X**
-    - Debugger helps locating software bugs by tracing/controlling the debuggee:
+    - Debugger (like gdb) helps locating software bugs by tracing/controlling the debuggee:
         - **Single-step mode**
         - **Breakpoints**: trigger when reaching a particular machine instruction
         - **Watchpoints**: trigger when a particular data element is accessed
