Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -48,16 +48,18 @@ Type: Section
         ```
         
 2. Q: **Why hello world can’t run on bare metal?**
+   (1. it depends on the standard library, and standard lib isn't present by bare metal
+    2. the standard lib is perceived for the host environment)
     - No dynamic linker available on bare metal (solution: link all necessary libraries statically)
     - No system calls - > Can’t use Standard CPP library in OS development
     - All functions and variable use virtual memory address, which is defined by linker  (- >need a custom linker config)
     - High-level language code needs environment setup (stack, CPU-register usage, address mapping) , need to specify which register contain return address etc.
         - Need own startup code (written in assembler) to setup the environment .
-3. Is OS development in a high level programming language (C, CPP, etc.)?
+4. Is OS development in a high level programming language (C, CPP, etc.)?
     
     Yes, but can’t use standard libs.
     
-4. **Q: Difference between static and shared linking**
+5. **Q: Difference between static and shared linking**
     - A **static library:  w**hen your program is linked against a static library, **the machine code of external functions used in your program is copied into the executable.**
         - Pros:
             - Load time faster
