Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -58,8 +58,10 @@ Type: Section
 4. Is OS development in a high level programming language (C, CPP, etc.)?
     
     Yes, but can’t use standard libs.
+
+   The code that you write must not rely upon any existing operating system. i.e.: you must code all of the function yourself, or call existing libraries. However, these existing libraries must be written so that they don't rely upon anything else.
     
-5. **Q: Difference between static and shared linking**
+6. **Q: Difference between static and shared linking**
     - A **static library:  w**hen your program is linked against a static library, **the machine code of external functions used in your program is copied into the executable.**
         - Pros:
             - Load time faster
