Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -86,7 +86,7 @@ Type: Section
 Booting is a process of starting a computer. The process involves a chain of stages, in which at each stage, a smaller, simpler program loads and then executes the larger, more complicated program of the next stage:
 
 - Start the system (turn on the machine)
-- CPU jump to a fixed address, where has the BIOS code, and execute the BIOS code
+- CPU jump to a fixed address, where has the BIOS code (basic input/output system), and execute the BIOS code
 - The BIOS performs basic system initialization (such as activating the video card and checking the amount of memory installed) and validation
 - BIOS loads the operating system from some appropriate location such as  hard disk, CD-ROM, and passes control of the machine to the operating system
 
