Update 2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md

--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -171,7 +171,12 @@ Booting is a process of starting a computer. The process involves a chain of sta
     - Debugger (like gdb) helps locating software bugs by tracing/controlling the debuggee:
         - **Single-step mode**
         - **Breakpoints**: trigger when reaching a particular machine instruction
+
+                            interrupt processing and start the Debugger. The Debugger is activated when the program reaches this point.
+
         - **Watchpoints**: trigger when a particular data element is accessed
+     
+                           The Debugger stops as soon as the value of the monitored variable changes.
         
         ->
         
