--- a/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
+++ b/2 week 9a8e1b06bc5340a68b5943ecf612a4c0.md
@@ -170,14 +170,11 @@ Booting is a process of starting a computer. The process involves a chain of sta
         - **Emulation is a special case of virtualization, which provides a virtual resource Y based on based on a resource X**
     - Debugger (like gdb) helps locating software bugs by tracing/controlling the debuggee:
         - **Single-step mode**
-        - **Breakpoints**: trigger when reaching a particular machine instruction
-
-                            interrupt processing and start the Debugger. The Debugger is activated when the program reaches this point.
-
-        - **Watchpoints**: trigger when a particular data element is accessed
-     
-                           The Debugger stops as soon as the value of the monitored variable changes.
-        
+        - **Breakpoints**: trigger when reaching a particular machine instruction.
+          interrupt processing and start the Debugger. The Debugger is activated when the program reaches this point.
+        - **Watchpoints**: trigger when a particular data element is accessed.
+          The Debugger stops as soon as the value of the monitored variable changes.
+          
         ->
         
         Bug-hunting might take longer
