Update Week 3 362dd9a53d35405c8e343d5c77271565.md

--- a/Week 3 362dd9a53d35405c8e343d5c77271565.md
+++ b/Week 3 362dd9a53d35405c8e343d5c77271565.md
@@ -58,6 +58,8 @@ Reviewed: No
         - Assign a number to each interrupt index into vector
         - Each entry contains pointers to functions, which handle a specific interrupt
         - When an external event or exception is generated, the hardware will generate an interrupt flag. The CPU can based on the interrupt flag to get the interrupt vector number, queries the interrupt vector table (based on the address and interrupt vector number of the interrupt vector table) to obtain the address of the interrupt program for the corresponding interrupt number, and further executes the corresponding interrupt handler.
+      
+   (base on interrupt flag->get the interrupt vector number->from the interrupt vector table to get the address of the interrupt program->executes the interrupt handler)
     4. Saving State
         
         Problem:
