Update Week 3 362dd9a53d35405c8e343d5c77271565.md

--- a/Week 3 362dd9a53d35405c8e343d5c77271565.md
+++ b/Week 3 362dd9a53d35405c8e343d5c77271565.md
@@ -176,3 +176,16 @@ Reviewed: No
         - In practice, 24 IRQ lines in IOPIC proved to be insufficient
             - So some of the IRQ lines has to be shared between devices
         - Message-Signalled Interrupts (MSIs) finally resolved this.
+
+## Summary
+- Interrupt-handling hardware implements …
+  - Prioritization
+  - Dispatch/execution of a handler routine
+  - State save and nested execution
+- Modern interrupt-handling hardware can …
+  - Modern interrupt-handling hardware can …
+  - avoid sharing vectors,
+  - flexibly dispatch interrupts in multiprocessor systems.
+- The operating system must …
+  - expect problems (spurious interrupts, interrupt storms)
+  - pass on the signaled event to higher levels and finally to the application process.
