Update Week 3 362dd9a53d35405c8e343d5c77271565.md

--- a/Week 3 362dd9a53d35405c8e343d5c77271565.md
+++ b/Week 3 362dd9a53d35405c8e343d5c77271565.md
@@ -183,7 +183,7 @@ Reviewed: No
   - Dispatch/execution of a handler routine
   - State save and nested execution
 - Modern interrupt-handling hardware can …
-  - Modern interrupt-handling hardware can …
+  - freely assign interrupt vectors,
   - avoid sharing vectors,
   - flexibly dispatch interrupts in multiprocessor systems.
 - The operating system must …
