Update week 4 2335392f2fd2476ea7b73ddc97363df7.md

--- a/week 4 2335392f2fd2476ea7b73ddc97363df7.md
+++ b/week 4 2335392f2fd2476ea7b73ddc97363df7.md
@@ -8,6 +8,7 @@ Reviewed: No
 ### Terminology:  difference between trap and interrupt
 
 1. “Trap”
+    - It's caused by division by zero or invalid memory access. 
     - triggered by an instruction （instruction can’t be executed/ instruction triggers mode switch）
         - system calls (int 0x80 or syscall / sysenter)
         - Undefined result (e.g. division by 0)
@@ -18,13 +19,13 @@ Reviewed: No
         - often predictable, often reproducible
         - Restart or abort the operation that triggers the trap
         - Traps can’t be suppressed
-2. “Interrupt”
+3. “Interrupt”
     - Triggered by hardware, i.e., Hardware requires attention by software
     - Properties
         - Asynchronous to program execution
         - not predictable, not reproducible
         - Usually resume the interrupted activity
-        - Interrupt can be supressed (cli)
+        - Interrupt can be suppressed (cli)
 
 ### Basic Assumptions
 
