Update week 4 2335392f2fd2476ea7b73ddc97363df7.md

--- a/week 4 2335392f2fd2476ea7b73ddc97363df7.md
+++ b/week 4 2335392f2fd2476ea7b73ddc97363df7.md
@@ -314,6 +314,8 @@ Reviewed: No
 
 ![Untitled](week%204%202335392f2fd2476ea7b73ddc97363df7/Untitled%207.png)
 
+The general takeaway is that disabled interrupts are something that usually works CPU locally. But the instruction on the other core could execute an interrupt that touches the same data structure, then the problem occurs again.-> Must disable the interrupts for all cores(globally).
+
 - disable interrupt →avoid race condition
 - problem
     - Hazard of losing interrupt requests
